<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Semitone</string>

    <!-- SETTINGS -->

    <string name="menu_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_global">Global settings</string>
    <string name="settings_piano">Piano</string>

    <string name="language_title">Language</string>
    <string name="language_summary">Set the language for Semitone</string>
    <string name="language_dialog">Language</string>
    <string-array name="language_entries">
        <item>system language</item>
        <item>English</item>
        <item>español / castellano</item>
    </string-array>
    <string-array name="language_values">
        <item></item>
        <item>en</item>
        <item>es</item>
    </string-array>

    <string name="concert_a_title">A4 pitch</string>
    <string name="concert_a_summary">Set the frequency of A4 (for alternative tunings)</string>
    <string name="concert_a_dialog">A4 pitch (in Hz)</string>

    <string name="sustain_title">Sustain</string>
    <string name="sustain_summary">If disabled, pressing a key will play a piano sound; if enabled, a synthesized sound will play while a key is held and stop when the key is released</string>

    <string name="labelnotes_title">Label notes</string>
    <string name="labelnotes_summary">Show note names on piano keys</string>

    <!-- ABOUT -->

    <string name="menu_about">About</string>
    <string name="about_title">About</string>
    <string name="about_file">about.html</string>

    <!-- TAB-SPECIFIC -->

    <string name="tuner_title">Tuner</string>
    <string name="cents">cents</string>
    <string name="micperm">tap to grant microphone permission</string>

    <string name="metronome_title">Metronome</string>
    <string name="tempo_label">tempo</string>
    <string name="beats_label">beats</string>
    <string name="subdiv_label">subdiv</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="tap_tempo_btn">Tap tempo</string>

    <string name="piano_title">Piano</string>

</resources>
